# mutmut-pyproject

./: Makefile  pyproject.toml
project1/: program.py
tests/: program_test.py
