[project]
name = "mutmut-pyproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "mutmut>=3.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[tool.mutmut]
paths_to_mutate = "project1/"
tests_dir = "tests/"
runner = "runner=python -m unittest discover -b -t tests/ -p '*_test.py' tests/"
debug = true
